github to Github

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </section>
 
 <section>
-<section id="slide-org0f8f6d6">
-<h2 id="org0f8f6d6">Base de Dados</h2>
+<section id="slide-org719511e">
+<h2 id="org719511e">Base de Dados</h2>
 <p>
 Informações sobre os <b>voos comerciais</b> norte americanos no ano de <b>2008</b>.
 </p>
@@ -45,8 +45,8 @@ Informações sobre os <b>voos comerciais</b> norte americanos no ano de <b>2008
 </p>
 
 </section>
-<section id="slide-org6fa38d5">
-<h3 id="org6fa38d5">Atributos</h3>
+<section id="slide-orgbd2a237">
+<h3 id="orgbd2a237">Atributos</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -81,8 +81,8 @@ Informações sobre os <b>voos comerciais</b> norte americanos no ano de <b>2008
 </table>
 
 </section>
-<section id="slide-orgabac43b">
-<h3 id="orgabac43b">Dados</h3>
+<section id="slide-org9aeb535">
+<h3 id="org9aeb535">Dados</h3>
 <p>
 <b>Dados publicos</b> e muito <b>divulgados</b>.
 </p>
@@ -98,8 +98,8 @@ Diversos dados <b>nulos</b>.
 </section>
 </section>
 <section>
-<section id="slide-orgb9cb1b8">
-<h2 id="orgb9cb1b8"><a href="https://www.omnisci.com/">OmniSci</a></h2>
+<section id="slide-org79713bb">
+<h2 id="org79713bb"><a href="https://www.omnisci.com/">OmniSci</a></h2>
 
 <div class="figure">
 <p><img src="./images/omnisci-initialPage.png" alt="omnisci-initialPage.png" />
@@ -111,8 +111,8 @@ Diversos dados <b>nulos</b>.
 </p>
 
 </section>
-<section id="slide-org035f63d">
-<h3 id="org035f63d"></h3>
+<section id="slide-orga5b640d">
+<h3 id="orga5b640d"></h3>
 <p>
 <b>Escalabilidade</b> e <b>performance</b> para lidar com Big Data.
 </p>
@@ -123,8 +123,8 @@ Diversos dados <b>nulos</b>.
 
 
 </section>
-<section id="slide-orgb62d2b7">
-<h3 id="orgb62d2b7">Arquitetura</h3>
+<section id="slide-orgad36559">
+<h3 id="orgad36559">Arquitetura</h3>
 
 <div class="figure">
 <p><img src="./images/omnisci.png" alt="omnisci.png" />
@@ -136,8 +136,8 @@ Diversos dados <b>nulos</b>.
 </p>
 
 </section>
-<section id="slide-orgcb3ab6a">
-<h3 id="orgcb3ab6a"><a href="https://www.omnisci.com/platform/omniscidb">OmniSciDB</a></h3>
+<section id="slide-orge4dc851">
+<h3 id="orge4dc851"><a href="https://www.omnisci.com/platform/omniscidb">OmniSciDB</a></h3>
 <p>
 <b>Open-source</b>.
 </p>
@@ -157,8 +157,8 @@ SQL nativo. <i>Query JIT compilation</i>.
 </section>
 </section>
 <section>
-<section id="slide-orgd6dd7b4">
-<h2 id="orgd6dd7b4"><a href="https://vega.github.io/vega/">Vega</a></h2>
+<section id="slide-orgc6b88de">
+<h2 id="orgc6b88de"><a href="https://vega.github.io/vega/">Vega</a></h2>
 
 <div class="figure">
 <p><img src="./images/vega-js.png" alt="vega-js.png" />
@@ -170,8 +170,8 @@ SQL nativo. <i>Query JIT compilation</i>.
 </p>
 
 </section>
-<section id="slide-orge0fb016">
-<h3 id="orge0fb016"></h3>
+<section id="slide-orgc770596">
+<h3 id="orgc770596"></h3>
 <p>
 Abstração de <b>declarativa</b> (<b>reativa</b>) sobre bibliotecas imperativas, como <a href="https://d3js.org/">D3.js</a>.
 </p>
@@ -189,8 +189,8 @@ Abstração de <b>declarativa</b> (<b>reativa</b>) sobre bibliotecas imperativas
 </p>
 
 </section>
-<section id="slide-orge727106">
-<h3 id="orge727106">DSL</h3>
+<section id="slide-org57ba57e">
+<h3 id="org57ba57e">DSL</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -221,8 +221,8 @@ Abstração de <b>declarativa</b> (<b>reativa</b>) sobre bibliotecas imperativas
 </table>
 
 </section>
-<section id="slide-orgcc38212">
-<h3 id="orgcc38212">Vega Spec</h3>
+<section id="slide-orgb6d8156">
+<h3 id="orgb6d8156">Vega Spec</h3>
 <div class="org-src-container">
 
 <pre  class="src src-js"><code trim><span style="color: #C4BE89;">{</span>
@@ -253,8 +253,8 @@ legendas e projeções eu deixei fora
 </section>
 </section>
 <section>
-<section id="slide-orgb8ea665">
-<h2 id="orgb8ea665">OmniSci + Vega</h2>
+<section id="slide-org8c8af57">
+<h2 id="org8c8af57">OmniSci + Vega</h2>
 <p>
 <a href="https://github.com/omnisci/mapd-connector">MapD connector</a>.
 </p>
@@ -279,8 +279,8 @@ cria uma conecao usando o connector mapD.
 </aside>
 
 </section>
-<section id="slide-org6bae259">
-<h3 id="org6bae259">OmniSci + Vega</h3>
+<section id="slide-org1bf7d8e">
+<h3 id="org1bf7d8e">OmniSci + Vega</h3>
 <p>
 <a href="https://github.com/omnisci/vega-transform-omnisci-core">Vega Transform OmniSci Core</a>.
 </p>
@@ -294,8 +294,8 @@ result.forEach<span style="color: #C4BE89;">(</span>ingest<span style="color: #C
 </div>
 
 </section>
-<section id="slide-org19f862e">
-<h3 id="org19f862e">Renderização</h3>
+<section id="slide-org2a692bb">
+<h3 id="org2a692bb">Renderização</h3>
 <div class="org-src-container">
 
 <pre  class="src src-js"><code trim>connection.connectAsync<span style="color: #C4BE89;">()</span>.then<span style="color: #C4BE89;">(</span>session =&gt; <span style="color: #FD971F;">{</span>
@@ -316,13 +316,13 @@ result.forEach<span style="color: #C4BE89;">(</span>ingest<span style="color: #C
 </section>
 </section>
 <section>
-<section id="slide-org20a883b">
-<h2 id="org20a883b">Objetivos visualização</h2>
-<div class="outline-text-2" id="text-org20a883b">
+<section id="slide-org7dd3145">
+<h2 id="org7dd3145">Objetivos visualização</h2>
+<div class="outline-text-2" id="text-org7dd3145">
 </div>
 </section>
-<section id="slide-orgf468f6e">
-<h3 id="orgf468f6e"></h3>
+<section id="slide-org5cbc862">
+<h3 id="org5cbc862"></h3>
 <p>
 Como o <b>tráfego aéreo</b> está <b>distribuídos</b> nos aeroportos? 
 </p>
@@ -340,15 +340,15 @@ Quais <b>estados</b> possuem maior tráfego aéreo?
 </p>
 
 </section>
-<section id="slide-org43bbf84">
-<h3 id="org43bbf84"></h3>
+<section id="slide-orgac60d07">
+<h3 id="orgac60d07"></h3>
 <p>
 Qual é o <b>comportamento temporal</b>, ao longo dos dias e meses, de uma série de informações: <b>tempo de atraso, quantidade de partidas e decolagem, tempo de voo</b>.
 </p>
 
 </section>
-<section id="slide-org4baad88">
-<h3 id="org4baad88"></h3>
+<section id="slide-org67bcb6f">
+<h3 id="org67bcb6f"></h3>
 <p>
 Como se comportam <b>atributos</b> como: <b>tempo de atraso</b> e <b>distância percorrida</b> (tempo de voo), há alguma correlação entre os mesmos?
 </p>
@@ -356,13 +356,13 @@ Como se comportam <b>atributos</b> como: <b>tempo de atraso</b> e <b>distância 
 </section>
 </section>
 <section>
-<section id="slide-orgf2d2fb7">
-<h2 id="orgf2d2fb7">Layout</h2>
-<div class="outline-text-2" id="text-orgf2d2fb7">
+<section id="slide-orgab61f10">
+<h2 id="orgab61f10">Layout</h2>
+<div class="outline-text-2" id="text-orgab61f10">
 </div>
 </section>
-<section id="slide-orga973e16" data-background="./images/vc-visualizacaoDados.png" data-background-size="1000px">
-<h3 id="orga973e16"></h3>
+<section id="slide-org927f1f1" data-background="./images/vc-visualizacaoDados.png" data-background-size="1000px">
+<h3 id="org927f1f1"></h3>
 <p>
 <a href="http://localhost:1234/">Demo</a>
 </p>
@@ -377,8 +377,8 @@ nao vou mostar as queries e tabelas.
 </section>
 </section>
 <section>
-<section id="slide-orgecd05f2">
-<h2 id="orgecd05f2">Mapa</h2>
+<section id="slide-org4ad1881">
+<h2 id="org4ad1881">Mapa</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -461,8 +461,8 @@ nao vou mostar as queries e tabelas.
 </table>
 </div>
 </section>
-<section id="slide-org923d56f">
-<h3 id="org923d56f">Spec</h3>
+<section id="slide-orga6cfddc">
+<h3 id="orga6cfddc">Spec</h3>
 <div style="font-size: 60%;">
 <div class="org-src-container">
 
@@ -533,8 +533,8 @@ nao vou mostar as queries e tabelas.
 </div>
 
 </section>
-<section id="slide-orgc923a33">
-<h3 id="orgc923a33">Mapa</h3>
+<section id="slide-org0dccd0c">
+<h3 id="org0dccd0c">Mapa</h3>
 
 <div class="figure">
 <p><img src="./images/vc-mapa.png" alt="vc-mapa.png" />
@@ -562,8 +562,8 @@ Alguns mais tem um trafego maior mas acho que se fizessemos um para o brasil ser
 </section>
 </section>
 <section>
-<section id="slide-org56a9f9d">
-<h2 id="org56a9f9d">Coordenadas paralelas</h2>
+<section id="slide-orgc77c1de">
+<h2 id="orgc77c1de">Coordenadas paralelas</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -686,8 +686,8 @@ Alguns mais tem um trafego maior mas acho que se fizessemos um para o brasil ser
 </div>
 
 </section>
-<section id="slide-org93a7e01">
-<h3 id="org93a7e01">Coordenadas paralelas</h3>
+<section id="slide-orgde2f8c0">
+<h3 id="orgde2f8c0">Coordenadas paralelas</h3>
 
 <div class="figure">
 <p><img src="./images/vc-coordenadasParalelas.png" alt="vc-coordenadasParalelas.png" />
@@ -714,8 +714,8 @@ Todos os dados seria inviável.
 </section>
 </section>
 <section>
-<section id="slide-org4564b6e">
-<h2 id="org4564b6e">Gráfico de barras</h2>
+<section id="slide-org98eb55d">
+<h2 id="org98eb55d">Gráfico de barras</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -786,8 +786,8 @@ Todos os dados seria inviável.
 </div>
 
 </section>
-<section id="slide-orgba08967">
-<h3 id="orgba08967">Gráfico de barras</h3>
+<section id="slide-orgede6293">
+<h3 id="orgede6293">Gráfico de barras</h3>
 
 <div class="figure">
 <p><img src="./images/vc-barChart.png" alt="vc-barChart.png" />
@@ -810,8 +810,8 @@ duplicado&#x2026; Soma as linhas origem e destino.
 </section>
 </section>
 <section>
-<section id="slide-org4bf55d0">
-<h2 id="org4bf55d0">Gráfico de linhas</h2>
+<section id="slide-orgbd16414">
+<h2 id="orgbd16414">Gráfico de linhas</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -882,8 +882,8 @@ duplicado&#x2026; Soma as linhas origem e destino.
 </div>
 
 </section>
-<section id="slide-org5793708">
-<h3 id="org5793708">Gráfico de linhas</h3>
+<section id="slide-orgfdef85c">
+<h3 id="orgfdef85c">Gráfico de linhas</h3>
 
 <div class="figure">
 <p><img src="./images/vc-linesChart.png" alt="vc-linesChart.png" />
@@ -904,8 +904,8 @@ Se tds os voos sairem no mesmo dia seria assim a situação.
 </section>
 </section>
 <section>
-<section id="slide-org9df4b44">
-<h2 id="org9df4b44">Heat Map</h2>
+<section id="slide-org2c04c50">
+<h2 id="org2c04c50">Heat Map</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -989,8 +989,8 @@ Se tds os voos sairem no mesmo dia seria assim a situação.
 </div>
 
 </section>
-<section id="slide-orgc20320f">
-<h3 id="orgc20320f">Heat Map</h3>
+<section id="slide-org58084bb">
+<h3 id="org58084bb">Heat Map</h3>
 
 <div class="figure">
 <p><img src="./images/vc-mapaCalor.png" alt="vc-mapaCalor.png" />
@@ -1012,8 +1012,8 @@ Poderia colocar em versões futuras o (weather-delay).
 </section>
 </section>
 <section>
-<section id="slide-orgd2baf55">
-<h2 id="orgd2baf55">Scatter plot</h2>
+<section id="slide-org4d902c2">
+<h2 id="org4d902c2">Scatter plot</h2>
 <div style="font-size: 60%;">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -1110,8 +1110,8 @@ Poderia colocar em versões futuras o (weather-delay).
 </div>
 
 </section>
-<section id="slide-orgf2e304a">
-<h3 id="orgf2e304a">Scatter plot</h3>
+<section id="slide-org32e8ea1">
+<h3 id="org32e8ea1">Scatter plot</h3>
 
 <div class="figure">
 <p><img src="./images/vc-scatterPlot.png" alt="vc-scatterPlot.png" />
@@ -1125,8 +1125,8 @@ Poderia colocar em versões futuras o (weather-delay).
 </section>
 </section>
 <section>
-<section id="slide-orgdceb5a4">
-<h2 id="orgdceb5a4">Considerações Finais</h2>
+<section id="slide-org1ce7ff2">
+<h2 id="org1ce7ff2">Considerações Finais</h2>
 <p>
 <b>Diversos</b> layouts (ao invés de focar em um super interativo).
 </p>
@@ -1136,8 +1136,8 @@ As <b>interações são limitadas</b> por enquanto.
 </p>
 
 </section>
-<section id="slide-org75b098a">
-<h3 id="org75b098a">Trabalhos futuros</h3>
+<section id="slide-org7d52b93">
+<h3 id="org7d52b93">Trabalhos futuros</h3>
 <p>
 Poderia usar técnicas similares com outro backend. (<code>Comparações</code> <code>possíveis</code>).
 </p>
@@ -1160,10 +1160,10 @@ Se encaixam melhor na minha linha de pesquisa.
 </section>
 </section>
 <section>
-<section id="slide-org36cf5e1">
-<h2 id="org36cf5e1">The End</h2>
+<section id="slide-org8790dc6">
+<h2 id="org8790dc6">The End</h2>
 <p>
-<a href="https://github.com/ceciliacsilva/mapd-app">github</a>
+<a href="https://github.com/ceciliacsilva/mapd-app">Github</a>
 </p>
 
 <p>
